# bearos

./: .gitignore  BUGS.md  CMakeLists.txt  NEXT_UP.txt  README.md  TODO  config.h  main.c  version.h
api/bearos/bearos/: compat.h  devctl.h  exec.h  gpio.h  intr.h  printf.h  syscalls.h  terminal.h  types.h
api/link/: script.ld
api/src/lib/: compat.c  getopt.c  lib.c  printf.c  terminal.c
api/src/start/: start.c
chardev/include/chardev/: gfxcondev.h  gpiodev.h  i2clcddev.h  picoconsoledev.h  wslcddev.h
chardev/src/: gfxcondev.c  gpiodev.c  i2clcddev.c  picoconsoledev.c  wslcddev.c
compat/include/compat/: compat.h
compat/src/: console.c  itoa.c  misc.c  re.c
devmgr/include/devmgr/: devmgr.h
devmgr/src/: devmgr.c
docs/: BUILD_LINUX.md  GFX_API.md  GPIO_API.md  PATHS.md  PORTING_TO_BEAROS.md  SHELL.md  SYSCALL.md  TERMINAL.md  TIMES.md
drivers/ds3231/include/ds3231/: ds3231.h
drivers/ds3231/src/: ds3231.c
drivers/i2c_lcd/include/i2c_lcd/: i2c_lcd.h
drivers/i2c_lcd/src/: i2c_lcd.c
drivers/sdcard/: README.md
drivers/sdcard/include/sdcard/: crc.h  sdcard.h
drivers/sdcard/src/: crc.c  sdcard.c
drivers/waveshare_lcd/include/waveshare_lcd/: waveshare_lcd.h
drivers/waveshare_lcd/src/: wslcd.c
fs/devfs/include/devfs/: devfs.h  devfsdir.h
fs/devfs/src/: devfs.c  devfsdir.c
fs/fat/include/fat/: fat.h  fatdir.h  fatfile.h
fs/fat/src/: fat.c  fatdir.c  fatfile.c
fs/fatfs_loopback/include/fatfs_loopback/: fatloopback.h
fs/fatfs_loopback/src/: fatfs_loopback.c  fatloopback.c
fs/fatfs_sdcard/include/fatfs_sdcard/: fatsd.h
fs/fatfs_sdcard/src/: fatfs_sdcard.c  fatsd.c
fs/ff14a/source/: ffconf.h
gfx/include/gfx/: fonts.h  gfx_util.h
gfx/src/: font12.c  font16.c  font20.c  font24.c  font8.c  gfx_util.c
klib/include/klib/: list.h  string.h
klib/src/: .term.c.swp  list.c  string.c
shell/include/shell/: shell.h  shell_cmd.h  shell_parser.h
shell/src/: shell.c  shell_cmd.c  shell_cmd_cat.c  shell_cmd_cd.c  shell_cmd_clear.c  shell_cmd_cp.c  shell_cmd_cp_mv.c  shell_cmd_date.c  shell_cmd_df.c  shell_cmd_echo.c  shell_cmd_env.c  shell_cmd_gpio.c  shell_cmd_grep.c  shell_cmd_ls.c  shell_cmd_mkdir.c  shell_cmd_mv.c  shell_cmd_rm.c  shell_cmd_rmdir.c  shell_cmd_run.c  shell_cmd_source.c  shell_cmd_uname.c  shell_parser.c
sys/include/sys/: clocks.h  datetime.h  direntry.h  diskinfo.h  elf.h  environment.h  error.h  filedesc.h  fsmanager.h  fsutil.h  fsysdesc.h  limits.h  process.h  syscall.h  syscalls.h
sys/src/: clocks.c  datetime.c  diskinfo.c  elf.c  environment.c  filedesc.c  fsmanager.c  fsutil.c  process.c  strings.c  strings.c.delete  sys_access.c  sys_chdir.c  sys_close.c  sys_devctl.c  sys_exit.c  sys_fstat.c  sys_ftruncate.c  sys_get_key.c  sys_get_line.c  sys_getcwd.c  sys_getdent.c  sys_gettimeofday.c  sys_gmtime_r.c  sys_intr.c  sys_localtime_r.c  sys_lseek.c  sys_mkdir.c  sys_open.c  sys_read.c  sys_read_timeout.c  sys_rename.c  sys_rmdir.c  sys_sbrk.c  sys_unlink.c  sys_usleep.c  sys_utime.c  sys_write.c  syscall.c
syslog/include/syslog/: syslog.h
syslog/src/: syslog.c
term/include/term/: term.h
term/src/: term_get_key.c  term_get_line.c
